erDiagram
    proposal_skripsis {
        bigint id PK "id"
        bigint mahasiswa_id FK "mahasiswa_id"
        bigint dosen_pembimbing_id FK "dosen_pembimbing_id"
        text judul "judul"
        varchar status "status"
        date tanggal_ujian "tanggal_ujian"
        timestamp created_at "created_at"
        timestamp updated_at "updated_at"
    }
    bimbingan_proposals {
        bigint id PK "id"
        bigint proposal_skripsi_id FK "proposal_skripsi_id"
        date tanggal "tanggal"
        text catatan "catatan"
        tinyint divalidasi "divalidasi"
        timestamp created_at "created_at"
        timestamp updated_at "updated_at"
    }
    skripsis {
        bigint id PK "id"
        bigint mahasiswa_id FK "mahasiswa_id"
        bigint dosen_pembimbing_id FK "dosen_pembimbing_id"
        text judul "judul"
        varchar status "status"
        date tanggal_ujian "tanggal_ujian"
        timestamp created_at "created_at"
        timestamp updated_at "updated_at"
    }
    bimbingan_skripsis {
        bigint id PK "id"
        bigint skripsi_id FK "skripsi_id"
        date tanggal "tanggal"
        text catatan "catatan"
        tinyint divalidasi "divalidasi"
        timestamp created_at "created_at"
        timestamp updated_at "updated_at"
    }
    yudisiums {
        bigint id PK "id"
        bigint mahasiswa_id FK "mahasiswa_id"
        bigint periode_wisuda_id FK "periode_wisuda_id"
        decimal ipk_akhir "ipk_akhir"
        varchar nomor_dokumen "nomor_dokumen"
        timestamp created_at "created_at"
        timestamp updated_at "updated_at"
    }
    periode_wisudas {
        bigint id PK "id"
        varchar nama "nama"
        date tanggal_wisuda "tanggal_wisuda"
        timestamp created_at "created_at"
        timestamp updated_at "updated_at"
    }
    proposal_skripsis ||--o{ bimbingan_proposals : "proposal_skripsi_id"
    skripsis ||--o{ bimbingan_skripsis : "skripsi_id"
    periode_wisudas |o--o{ yudisiums : "periode_wisuda_id"